--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dub Dub</title>
+    <title>Dubblog</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/entry.css">
 </head>
 <body>
+    <h1>Dub Dub</h1>
+    <p>Welcome to the offial Dub Dub dev blog website.</p>
     <ul id="entries">
-    {{entries}}
+    {{{entries}}}
     </ul>
 </body>
 </html>
