Rendering is now handelled by mustache

--- a/templates/entryTemplate.html
+++ b/templates/entryTemplate.html
@@ -1,5 +1,5 @@
 <li class="entry">
-    <h1 class="entry-head">{{title}} Version: {{version}}</h1>
+    <h1 class="entry-head">{{title}}</h1><h2>Version: {{version}}</h2>
     <p class="entry-date">{{date}}</p>
     <div class="entry-content">{{content}}</div>
 </li>
