--- a/templates/entryTemplate.html
+++ b/templates/entryTemplate.html
@@ -1,5 +1,10 @@
 <li class="entry">
-    <h1 class="entry-head">{{title}}</h1><h2>Version: {{version}}</h2>
     <p class="entry-date">{{date}}</p>
-    <div class="entry-content">{{content}}</div>
+    <div class="entry-head">
+        <h1 class="entry-title">{{title}}</h1>
+        <p class="entry-version" >{{version}}</p>
+    </div>
+    <div class="entry-body">
+        <div class="entry-content">{{content}}</div>
+    </div>
 </li>
