entered update info for version 0.2

--- a/templates/entryTemplate.html
+++ b/templates/entryTemplate.html
@@ -5,6 +5,6 @@
         <p class="entry-version" >{{version}}</p>
     </div>
     <div class="entry-body">
-        <div class="entry-content">{{content}}</div>
+        <div class="entry-content">{{{content}}}</div>
     </div>
 </li>
