--- a/templates/entries/0.2.html
+++ b/templates/entries/0.2.html
@@ -1,13 +1,16 @@
+<div>
+    <img src="/images/phuhziIcon.png" alt="phuhzi">
+</div>
 <h2 style="margin-bottom: 0;">Changes:</h2>
-<ul>
-    <li>Changed: AI will are smarter and have more states</li>
+<ul class="entry-changes">
+    <li>Changed: AI are smarter and have more states</li>
     <li>Added: Pause menu.</li>
     <li>Added: Pettings menu.</li>
     <li>Added: AI now drop ammo when killed.</li>
     <li>Added: Player can now die and thier position will be reset.</li>
-    <li>Added: Phuzi</li>
-    <li>Changed: Gun now have random recoil.</li>
+    <li>Added: Phuhzi.</li>
+    <li>Added: Random recoil.</li>
     <li>Changed: Gun recoil has been moved to a Vector array system from an animation curve system.</li> 
-    <li>Removed: Recoil return sytem. Never could get it to work correctly</li>
-    <li>Fixed: Player would get stuck on edges unable to jump.</li>
+    <li>Removed: Recoil return system. It never worked correctly.</li>
+    <li>Fixed: Player getting stuck on edges unable to jump.</li>
 </ul>
