--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="/css/entry.css">
 </head>
 <body>
-    <h1>Dub Dub</h1>
-    <p>Welcome to the offial Dub Dub dev blog website.</p>
+    <span style="display: flex; width: 100%; justify-content: center ;">
+        <img src="/images/ddTitle.png" alt="DUBDUB" style="width: 60%;">
+    </span>
+    <p style="color:lightgrey; margin-left: 40px; margin-bottom: 40px;">Welcome to the offial Dub Dub dev blog website.</p>
+    <h1 style="color: green;">Updates:</h1>
     <ul id="entries">
     {{{entries}}}
     </ul>
