--- a/templates/entries/0.2.html
+++ b/templates/entries/0.2.html
@@ -5,9 +5,9 @@
 <ul class="entry-changes">
     <li>Changed: AI are smarter and have more states</li>
     <li>Added: Pause menu.</li>
-    <li>Added: Pettings menu.</li>
+    <li>Added: Settings menu.</li>
     <li>Added: AI now drop ammo when killed.</li>
-    <li>Added: Player can now die and thier position will be reset.</li>
+    <li>Added: Player can now die and their position will be reset.</li>
     <li>Added: Phuhzi.</li>
     <li>Added: Random recoil.</li>
     <li>Changed: Gun recoil has been moved to a Vector array system from an animation curve system.</li> 
