--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,18 @@
     <link rel="stylesheet" href="/css/entry.css">
 </head>
 <body>
+    <h2 style="color:lightgrey; margin-left: 40px;">Welcome to the Dubblog, the development blog website for Dub Dub.</h2>
+    <p style="color:lightgrey; margin-left: 60px; margin-bottom: 40px;">Dub Dub is going to be a multiplayer game where the player can siege and pillage enemie bases with thier own army. Lone wolf or co-op stealthing will also be an option when full scale sieging is not worth it. Players will also have to defend thier, new found, loot from other players aswell.</p>
+
     <span style="display: flex; width: 100%; justify-content: center ;">
         <img src="/images/ddTitle.png" alt="DUBDUB" style="width: 60%;">
     </span>
-    <p style="color:lightgrey; margin-left: 40px; margin-bottom: 40px;">Welcome to the offial Dub Dub dev blog website.</p>
+    <span style="display: flex; width: 100%; justify-content: center ;">
+        <img src="/images/shootingRange.png" alt="Bob" style="width: 90%;">
+    </span>
+    <span style="display: flex; width: 100%; justify-content: center ;">
+        <img src="/images/bob.png" alt="Bob" style="width: 90%;">
+    </span>
     <h1 style="color: green;">Updates:</h1>
     <ul id="entries">
     {{{entries}}}
